--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "pluggers",
-  "version": "0.3.2",
-  "description": "A simple plugin manager library",
-  "main": "index.js",
+  "version": "1.0.0",
+  "description": "A convenient plugin manager library",
+  "files": [
+    "build/**/*"
+  ],
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
   "scripts": {
-    "test": "mocha",
-    "test-ci": "nyc --reporter=lcov mocha && codecov"
+    "build": "rimraf ./build && tsc",
+    "prepublish": "npm run build",
+    "test": "ts-mocha \"./src/test/*.ts\" ",
+    "test:coverage": "TS_NODE_COMPILER_OPTIONS='{\"target\":\"es6\"}' nyc --reporter=lcov npm test",
+    "test:ci": "npm run test:coverage && codecov",
+    "test:js": "npm run build && mocha \"./build/test/**/*.js\""
   },
   "repository": {
     "type": "git",
@@ -18,11 +26,20 @@
   },
   "homepage": "https://github.com/alvitoraidhy/pluggers#readme",
   "devDependencies": {
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^15.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "codecov": "^3.8.1",
-    "eslint": "^7.24.0",
+    "eslint": "^7.25.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.22.1",
     "mocha": "^8.3.2",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "rimraf": "^3.0.2",
+    "ts-mocha": "^8.0.0",
+    "typescript": "^4.2.4"
   }
 }
