--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mocha": "^8.3.2",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
-    "ts-mocha": "^8.0.0"
+    "ts-mocha": "^8.0.0",
+    "typescript": "^4.3.2"
   }
 }
