--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
+    "callsites": "^3.1.0",
+    "load-json-file": "^6.2.0",
     "semver": "^7.3.5"
   }
 }
