--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "homepage": "https://github.com/alvitoraidhy/pluggers#readme",
   "devDependencies": {
+    "@types/glob": "^7.1.3",
+    "@types/jsonfile": "^6.0.0",
     "@types/mocha": "^8.2.2",
     "@types/node": "^15.0.1",
     "@types/semver": "^7.3.6",
@@ -46,7 +48,8 @@
   },
   "dependencies": {
     "callsites": "^3.1.0",
-    "load-json-file": "^6.2.0",
+    "glob": "^7.1.7",
+    "jsonfile": "^6.1.0",
     "semver": "^7.3.5"
   }
 }
