--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
-    "build": "rimraf ./build && tsc && copyfiles -u 1 ./src/**/*.json ./build/",
+    "build": "rimraf ./build && tsc && copyfiles -u 1 \"./src/**/*.!(ts)\" ./build/",
     "prepublishOnly": "npm run build",
     "test": "ts-mocha \"./src/test/*.ts\" ",
     "test:coverage": "TS_NODE_COMPILER_OPTIONS='{\"target\":\"es6\"}' nyc --reporter=lcov npm test",
@@ -30,6 +30,7 @@
     "@types/jsonfile": "^6.0.0",
     "@types/mocha": "^8.2.2",
     "@types/node": "^15.0.1",
+    "@types/proper-lockfile": "^4.1.1",
     "@types/semver": "^7.3.6",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
@@ -48,8 +49,10 @@
   },
   "dependencies": {
     "callsites": "^3.1.0",
+    "dotenv": "^10.0.0",
     "glob": "^7.1.7",
     "jsonfile": "^6.1.0",
+    "proper-lockfile": "^4.1.2",
     "semver": "^7.3.5"
   }
 }
