--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "build": "rimraf ./build && tsc && copyfiles -u 1 \"./src/**/*.!(ts)\" ./build/",
     "prepublishOnly": "npm run build",
     "test": "ts-mocha \"./src/test/*.ts\" ",
+    "test:js": "npm run build && mocha \"./build/test/**/*.js\"",
+    "test:all": "npm run test && npm run test:js",
     "test:coverage": "TS_NODE_COMPILER_OPTIONS='{\"target\":\"es6\"}' nyc --reporter=lcov npm test",
-    "test:ci": "npm run test:coverage && codecov",
-    "test:js": "npm run build && mocha \"./build/test/**/*.js\""
+    "test:ci": "npm run test:coverage && codecov"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
   },
   "homepage": "https://github.com/alvitoraidhy/pluggers#readme",
   "devDependencies": {
+    "@types/array.prototype.flat": "^1.2.1",
     "@types/glob": "^7.1.3",
     "@types/jsonfile": "^6.0.0",
     "@types/mocha": "^8.2.2",
@@ -48,11 +50,10 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
-    "callsites": "^3.1.0",
-    "dotenv": "^10.0.0",
-    "glob": "^7.1.7",
+    "array.prototype.flat": "^1.2.4",
+    "async-mutex": "^0.3.1",
     "jsonfile": "^6.1.0",
-    "proper-lockfile": "^4.1.2",
-    "semver": "^7.3.5"
+    "semver": "^7.3.5",
+    "tiny-glob": "^0.2.9"
   }
 }
