--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "1.3.0",
   "description": "A convenient plugin manager library",
   "files": [
-    "build/**/*"
+    "lib/**/*"
   ],
-  "main": "build/index.js",
-  "types": "build/index.d.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "build": "rimraf ./build && tsc && copyfiles -u 1 \"./src/**/*.!(ts)\" ./build/",
+    "build": "rimraf ./lib && tsc && copyfiles -u 1 \"./src/**/*.!(ts)\" ./lib/",
     "prepublishOnly": "npm run build",
+    "doc:clean": "rimraf ./docs",
+    "doc:generate": "npm run doc:clean && typedoc ./src/index.ts",
+    "doc:watch": "typedoc --watch",
     "test": "ts-mocha \"./src/test/*.ts\" ",
-    "test:js": "npm run build && mocha \"./build/test/**/*.js\"",
+    "test:js": "npm run build && mocha \"./lib/test/**/*.js\"",
     "test:all": "npm run test && npm run test:js",
     "test:coverage": "TS_NODE_COMPILER_OPTIONS='{\"target\":\"es6\"}' nyc --reporter=lcov npm test",
     "test:ci": "npm run test:coverage && codecov"
@@ -28,11 +31,9 @@
   "homepage": "https://github.com/alvitoraidhy/pluggers#readme",
   "devDependencies": {
     "@types/array.prototype.flat": "^1.2.1",
-    "@types/glob": "^7.1.3",
     "@types/jsonfile": "^6.0.0",
     "@types/mocha": "^8.2.2",
     "@types/node": "^15.0.1",
-    "@types/proper-lockfile": "^4.1.1",
     "@types/semver": "^7.3.6",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
@@ -47,6 +48,7 @@
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "ts-mocha": "^8.0.0",
+    "typedoc": "^0.21.0",
     "typescript": "^4.3.2"
   },
   "dependencies": {
