Update post publish script

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "build": "rimraf ./lib && tsc && copyfiles -u 1 \"./src/**/*.!(ts)\" ./lib/",
     "prepublishOnly": "npm run build",
     "doc:clean": "rimraf ./docs",
-    "doc:generate": "typedoc ./src/index.ts",
     "doc:watch": "typedoc --watch",
+    "doc:generate": "typedoc ./src/index.ts",
+    "doc:commit": "cross-var cd ./docs && git add . && git commit -m \"Update documentations for $npm_package_version\"",
     "test": "ts-mocha \"./src/test/*.ts\" ",
     "test:js": "npm run build && mocha \"./lib/test/**/*.js\"",
     "test:all": "npm run test && npm run test:js",
@@ -39,6 +40,7 @@
     "@typescript-eslint/parser": "^4.22.0",
     "codecov": "^3.8.1",
     "copyfiles": "^2.4.1",
+    "cross-var": "^1.1.0",
     "eslint": "^7.25.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
