--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "scripts": {
     "build": "rimraf ./lib && tsc && copyfiles -u 1 \"./src/**/*.!(ts)\" ./lib/",
     "prepublishOnly": "npm run build",
+    "postpublish": "npm run doc:generate && npm run doc:commit && npm run doc:push",
     "doc:clean": "rimraf ./docs",
     "doc:watch": "typedoc --watch",
     "doc:generate": "typedoc ./src/index.ts",
-    "doc:commit": "cross-var cd ./docs && git add . && git commit -m \"Update documentations for $npm_package_version\"",
+    "doc:commit": "cd ./docs && git add . && cross-var git commit -m \"Update documentations for $npm_package_version\"",
+    "doc:push": "cd ./docs && git push",
     "test": "ts-mocha \"./src/test/*.ts\" ",
     "test:js": "npm run build && mocha \"./lib/test/**/*.js\"",
     "test:all": "npm run test && npm run test:js",
