Use Prettier with ESLint

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "build": "rimraf ./lib && tsc && copyfiles -u 1 \"./src/**/*.!(ts)\" ./lib/",
     "prepublishOnly": "npm run build",
     "postpublish": "npm run doc:generate && npm run doc:commit && npm run doc:push",
+    "build": "rimraf ./lib && tsc && copyfiles -u 1 \"./src/**/*.!(ts)\" ./lib/",
+    "lint": "eslint .",
+    "format": "prettier --write .",
     "doc:clean": "rimraf ./docs",
     "doc:watch": "typedoc --watch",
     "doc:generate": "typedoc",
@@ -44,12 +46,10 @@
     "copyfiles": "^2.4.1",
     "cross-var": "^1.1.0",
     "eslint": "^7.25.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-config-prettier": "^8.3.0",
     "mocha": "^8.3.2",
     "nyc": "^15.1.0",
+    "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
     "ts-mocha": "^8.0.0",
     "typedoc": "^0.21.0",
