--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,36 +1,18 @@
 {
-  "settings": {
-    "import/resolver": {
-      "typescript": {}
-    }
-  },
   "env": {
     "es2021": true,
-    "node": true,
-    "mocha": true
+    "node": true
   },
   "extends": [
-    "airbnb-base"
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": [
-    "@typescript-eslint",
-    "import"
-  ],
-  "rules": {
-    "import/extensions": [
-      "error",
-      "ignorePackages",
-      {
-        "js": "never",
-        "jsx": "never",
-        "ts": "never",
-        "tsx": "never"
-      }
-   ]
-  }
+  "plugins": ["@typescript-eslint"],
+  "rules": {}
 }
