--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pluggers",
-  "version": "2.1.4",
+  "version": "2.2.0-0",
   "description": "A convenient plugin manager library",
   "directories": {
     "lib": "lib",
