--- a/package.json
+++ b/package.json
@@ -32,9 +32,7 @@
   },
   "homepage": "https://alvitoraidhy.github.io/pluggers/",
   "devDependencies": {
-    "@types/array.prototype.flat": "^1.2.1",
     "@types/jest": "^27.0.1",
-    "@types/jsonfile": "^6.0.0",
     "@types/node": "^15.0.1",
     "@types/semver": "^7.3.6",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
@@ -51,10 +49,7 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
-    "array.prototype.flat": "^1.2.4",
     "async-mutex": "^0.3.1",
-    "jsonfile": "^6.1.0",
-    "semver": "^7.3.5",
-    "tiny-glob": "^0.2.9"
+    "semver": "^7.3.5"
   }
 }
