--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "commonjs" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */,
     "declaration": true /* Generates corresponding '.d.ts' file. */,
     "sourceMap": false /* Generates corresponding '.map' file. */,
+    "lib": ["es2019"],
 
     /* Strict Type-Checking Options */
     "strict": true /* Enable all strict type-checking options. */,
